--- a/log.html
+++ b/log.html
@@ -22,14 +22,25 @@
                      <a href=""> forgot password</a>
                     </form></div>
                 <div class="card-back">
-                    <h2> REGISTER</h2>
+                    <h2> REGISTER HERE</h2>
                     <form>
-                     <input type="texte" class=" input-box"  placeholder="first name" required>
+                    <input type="texte" class=" input-box"  placeholder="first name" required>
                      <input type="text" class=" input-box"  placeholder="second name" required>
                      <input type="text" class=" input-box"  placeholder="id number" required>
-                     <input type="text " class=" input-box"  placeholder="location" required>
+                     <input type="text" class=" input-box"  placeholder="phone number" required>
+                     <input type="date" class=" input-box"  placeholder="day" required>
                      <input type="email" class=" input-box"  placeholder="your email id" required>
                      <input type="password" class=" input-box"  placeholder="password" required>
+                     <input type="password" class=" input-box"  placeholder="conferm your password" required>
+                     <input type="text " class=" input-box"  placeholder="address" required>
+                     <input type=" radio" class="input-box" placeholder=" gender" required>
+                     <select name = "province" >
+                        <option> Kigali City</option>
+                        <option> northern province</option>
+                        <option> sourth province</option>
+                        <option> eastern province</option>
+                        <option> western province</option>
+                     </select>
                      <button type="submit" class="submit-btn">submit</button>
                      <input type="checkbox"><span> remember me </span>
                      <button type="button" class="btn" onclick="openLogin()"> i'v an account</button>
